[package]
name = "luavisors"
version = "0.1.0"
edition = "2021"
authors = [ "fboulnois <fboulnois@users.noreply.github.com>" ]
description = "A minimal process supervisor for containers using Rust and Lua"
keywords = [ "pid1", "init", "supervisor", "lua", "scripting" ]
readme = "README.md"
repository = "https://github.com/fboulnois/luavisors"
license = "MPL-2.0"

[dependencies]
async-signal = { version = "0.2" }
mlua = { version = "0.10", features = ["luajit52", "vendored", "async", "send"] }
smol = { version = "2" }
